--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,13 @@
-runtime: python
-env: flex
-entrypoint: gunicorn -b :$PORT main:app
+runtime: python27
+api_version: 1
+threadsafe: yes
 
-runtime_config:
-  python_version: 3
+handlers:
+- url: .*
+  script: bot_gae.app
+
+libraries:
+- name: webapp2
+  version: "2.5.2"
+- name: ssl
+  version: latest
