--- a/app.yaml
+++ b/app.yaml
@@ -1,3 +1,5 @@
+application: botgamereg-hello
+version: 1
 runtime: python27
 api_version: 1
 threadsafe: yes
@@ -10,6 +12,4 @@ libraries:
 - name: webapp2
   version: "2.5.2"
 - name: ssl
-  version: latest
-- name: telegram
   version: latest
